--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.othelle.jtuples</groupId>
+            <artifactId>jtuples</artifactId>
+            <version>0.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
